--- a/front-end/site/css/style.css
+++ b/front-end/site/css/style.css
@@ -14,8 +14,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("../fonts/fontawesome-webfont.eot?v=4.5.0");
-  src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.5.0") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2?v=4.5.0") format("woff2"), url("../fonts/fontawesome-webfont.woff?v=4.5.0") format("woff"), url("../fonts/fontawesome-webfont.ttf?v=4.5.0") format("truetype"), url("../fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular") format("svg");
+  src: url("fontawesome/fonts/fontawesome-webfont.eot?v=4.5.0");
+  src: url("fontawesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0") format("embedded-opentype"), url("fontawesome/fonts/fontawesome-webfont.woff2?v=4.5.0") format("woff2"), url("fontawesome/fonts/fontawesome-webfont.woff?v=4.5.0") format("woff"), url("fontawesome/fonts/fontawesome-webfont.ttf?v=4.5.0") format("truetype"), url("fontawesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -2317,11 +2317,11 @@ body {
   font-weight: 400; }
 
 ::-moz-selection {
-  background: rgba(48, 48, 48, 0.99);
+  background: rgba(39, 149, 188, 0.99);
   color: #ffffff; }
 
 ::selection {
-  background: rgba(48, 48, 48, 0.99);
+  background: rgba(39, 149, 188, 0.99);
   color: #ffffff; }
 
 /*==============================================================================
@@ -2431,7 +2431,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: calc( 100vh - 70px - 90px); }
+  height: calc( 100vh - 70px); }
 
 .pane {
   display: block;
@@ -2446,3 +2446,92 @@ body {
 .pane-centre {
   width: 50%;
   padding: 45px 8.33333%; }
+
+/*------------------------------------------------------------------------------
+# LEFT PANE (CALLER INFORMATION)
+------------------------------------------------------------------------------*/
+.pane-left {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
+.call-info-wrapper {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.call-avatar {
+  display: block;
+  width: 100px;
+  height: 100px;
+  font-weight: 600;
+  color: #ffffff;
+  font-size: 2.3em;
+  line-height: 100px;
+  text-align: center; }
+
+.call-name-button-wrapper {
+  display: block;
+  margin: 8px 0 8px 25px; }
+
+.call-name {
+  font-weight: 400;
+  color: #333333;
+  font-size: 1.8em;
+  margin-bottom: 10px; }
+
+.call-info-link {
+  display: block;
+  margin: 5px 0;
+  color: #3fafd7;
+  transition: color 0.1s;
+  font-weight: 600;
+  font-size: 1.2em; }
+  .call-info-link:first-of-type {
+    margin: 30px 0 5px; }
+  .call-info-link:last-of-type {
+    margin: 5px 0 20px; }
+  .call-info-link:hover {
+    color: #258eb3; }
+
+.call-capsule-info-wrapper {
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  overflow-y: auto;
+  border-top: 1px solid rgba(170, 170, 170, 0.2);
+  border-bottom: 1px solid rgba(170, 170, 170, 0.2); }
+
+.call-capsule-info li {
+  color: #333333;
+  font-size: 1em;
+  line-height: 150%; }
+  .call-capsule-info li:first-of-type {
+    margin-top: 10px; }
+  .call-capsule-info li:last-of-type {
+    margin-bottom: 10px; }
+  .call-capsule-info li .call-capsule-light {
+    color: #aaaaaa;
+    margin-right: 10px; }
+
+/*==============================================================================
+# BUTTONS
+==============================================================================*/
+.btn {
+  display: block;
+  padding: 6px 10px;
+  text-align: center; }
+
+.btn-blue {
+  border: 1px solid #3fafd7;
+  color: #3fafd7;
+  transition: color 0.1s, background 0.1s; }
+  .btn-blue:hover {
+    color: #ffffff;
+    background: #3fafd7; }
+
+.btn-call {
+  width: 130px; }
