--- a/front-end/site/css/style.css
+++ b/front-end/site/css/style.css
@@ -2314,7 +2314,8 @@ th {
 body {
   background: #ffffff;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 400; }
+  font-weight: 400;
+  color: #333333; }
 
 ::-moz-selection {
   background: rgba(39, 149, 188, 0.99);
@@ -2416,12 +2417,6 @@ body {
       .nav-user .nav-user-signout a:hover {
         color: #fcfcfc;
         background: #f7a007; }
-  .nav-user .nav-user-avatar {
-    width: 70px;
-    font-size: 26px;
-    font-weight: 600;
-    color: #ffffff;
-    cursor: default; }
 
 /*==============================================================================
 # PANES
@@ -2448,9 +2443,10 @@ body {
   padding: 45px 8.33333%; }
 
 /*------------------------------------------------------------------------------
-# LEFT PANE (CALLER INFORMATION)
+# SIDE PANES
 ------------------------------------------------------------------------------*/
-.pane-left {
+.pane-left,
+.pane-centre {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -2461,17 +2457,8 @@ body {
 .call-info-wrapper {
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex; }
-
-.call-avatar {
-  display: block;
-  width: 100px;
-  height: 100px;
-  font-weight: 600;
-  color: #ffffff;
-  font-size: 2.3em;
-  line-height: 100px;
-  text-align: center; }
+  display: flex;
+  margin-bottom: 25px; }
 
 .call-name-button-wrapper {
   display: block;
@@ -2479,8 +2466,7 @@ body {
 
 .call-name {
   font-weight: 400;
-  color: #333333;
-  font-size: 1.8em;
+  font-size: 1.7em;
   margin-bottom: 10px; }
 
 .call-info-link {
@@ -2490,8 +2476,6 @@ body {
   transition: color 0.1s;
   font-weight: 600;
   font-size: 1.2em; }
-  .call-info-link:first-of-type {
-    margin: 30px 0 5px; }
   .call-info-link:last-of-type {
     margin: 5px 0 20px; }
   .call-info-link:hover {
@@ -2503,12 +2487,11 @@ body {
           flex: 1;
   overflow-y: auto;
   border-top: 1px solid rgba(170, 170, 170, 0.2);
-  border-bottom: 1px solid rgba(170, 170, 170, 0.2); }
+  border-bottom: 1px solid rgba(170, 170, 170, 0.2);
+  line-height: 1.5; }
 
 .call-capsule-info li {
-  color: #333333;
-  font-size: 1em;
-  line-height: 150%; }
+  font-size: 1em; }
   .call-capsule-info li:first-of-type {
     margin-top: 10px; }
   .call-capsule-info li:last-of-type {
@@ -2516,6 +2499,62 @@ body {
   .call-capsule-info li .call-capsule-light {
     color: #aaaaaa;
     margin-right: 10px; }
+  .call-capsule-info li p {
+    margin-top: 15px; }
+  .call-capsule-info li hr {
+    height: 1px;
+    width: 100%;
+    background: #aaaaaa;
+    margin: 20px 0; }
+
+.pane-right h3 {
+  margin-bottom: 20px; }
+
+/*------------------------------------------------------------------------------
+# CENTRE PANE
+------------------------------------------------------------------------------*/
+.centre-heading-wrapper {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 25px; }
+  .centre-heading-wrapper div {
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1; }
+
+.pane-centre > h3 {
+  margin: 30px 0 15px; }
+  .pane-centre > h3:first-of-type {
+    margin-top: 0; }
+
+.centre-heading-right {
+  text-align: right; }
+
+.call-notes {
+  width: 100%;
+  resize: none;
+  line-height: 1.5;
+  padding: 20px;
+  box-sizing: border-box;
+  border: 1px solid #aaaaaa;
+  color: #aaaaaa;
+  transition: color 0.1s, border 0.1s; }
+  .call-notes:hover, .call-notes:focus {
+    color: #333333;
+    border: 1px solid #333333; }
+
+/*==============================================================================
+# TYPOGRAPHY
+==============================================================================*/
+h1 {
+  font-size: 2em;
+  font-weight: 600; }
+
+h3 {
+  color: #aaaaaa;
+  font-weight: 400;
+  margin-bottom: 5px; }
 
 /*==============================================================================
 # BUTTONS
@@ -2523,15 +2562,42 @@ body {
 .btn {
   display: block;
   padding: 6px 10px;
-  text-align: center; }
+  text-align: center;
+  transition: color 0.1s, background 0.1s; }
 
 .btn-blue {
   border: 1px solid #3fafd7;
-  color: #3fafd7;
-  transition: color 0.1s, background 0.1s; }
+  color: #3fafd7; }
   .btn-blue:hover {
     color: #ffffff;
     background: #3fafd7; }
 
 .btn-call {
   width: 130px; }
+
+.btn-orange {
+  border: 1px solid #f9aa1e;
+  color: #f9aa1e; }
+  .btn-orange:hover {
+    color: #ffffff;
+    background: #f9aa1e; }
+
+/*==============================================================================
+# AVATAR
+==============================================================================*/
+.avatar {
+  font-weight: 600;
+  color: #ffffff;
+  cursor: default;
+  text-align: center; }
+
+.call-avatar {
+  display: block;
+  width: 100px;
+  height: 100px;
+  font-size: 2.3em;
+  line-height: 100px; }
+
+.nav-user-avatar {
+  width: 70px;
+  font-size: 26px; }
