--- a/front-end/site/scss/_body.scss
+++ b/front-end/site/scss/_body.scss
@@ -6,6 +6,7 @@ body {
     background: $t-white;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    color: $t-black;
 }
 
 ::selection {
