--- a/front-end/site/scss/_variables.scss
+++ b/front-end/site/scss/_variables.scss
@@ -18,6 +18,7 @@ $t-black:   #333333;
 # DIMENSIONS
 ------------------------------------------------------------------------------*/
 $nav-height: 70px;
+$nav-height-1600: 50px;
 $nav-logo-height: 26px;
 
 $callscreen-avatar-size: 100px;
