--- a/front-end/site/scss/_avatar.scss
+++ b/front-end/site/scss/_avatar.scss
@@ -21,3 +21,22 @@
     width: $nav-height;
     font-size: 26px;
 }
+
+@media screen and (max-width: 1600px) {
+    .call-avatar {
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        font-size: 1.3em;
+        line-height: 50px;
+    }
+
+    .pane-right .call-avatar {
+        top: -10px;
+    }
+
+    .nav-user-avatar {
+        width: $nav-height-1600;
+        font-size: 1.3em;
+    }
+}
