--- a/front-end/site/scss/_buttons.scss
+++ b/front-end/site/scss/_buttons.scss
@@ -32,3 +32,11 @@
         background: $t-orange;
     }
 }
+
+@media screen and (max-width: 1600px) {
+    .btn-call {
+        width: 110px;
+        font-size: 0.9em;
+        padding: 6px 10px;
+    }
+}
