--- a/front-end/site/scss/_typography.scss
+++ b/front-end/site/scss/_typography.scss
@@ -11,3 +11,13 @@ h3 {
     font-weight: 400;
     margin-bottom: 5px;
 }
+
+@media screen and (max-width: 1600px) {
+    h1 {
+        font-size: 1.6em;
+    }
+
+    h3 {
+        font-size: 1em;
+    }
+}
