--- a/front-end/site/scss/_panes.scss
+++ b/front-end/site/scss/_panes.scss
@@ -148,11 +148,51 @@
     }
 }
 
+.pane.pane-left.pane-side.admin {
+    overflow-y: auto;
+}
+
+/*------------------------------------------------------------------------------
+# ADMIN
+------------------------------------------------------------------------------*/
+.admin-team-wrapper {
+    border-left: 3px solid;
+    padding: 15px 0 0 20px;
+    margin-bottom: 30px;
+    background: $t-white;
+
+    .call-name {
+        margin-bottom: 0;
+    }
+
+    .user-wrapper {
+        display: flex;
+        margin-bottom: 20px;
+
+        &:hover {
+            background: $t-lgrey;
+
+            .user-name {
+                color: $t-black;
+            }
+        }
+    }
+
+    .user-name-button-wrapper {
+        margin-left: 20px;
+    }
+}
+
+
 /*------------------------------------------------------------------------------
 # MEDIA QUERIES
 ------------------------------------------------------------------------------*/
 
 @media screen and (max-width: 1600px) {
+    .pane-wrapper {
+        height: calc(100vh - 50px);
+    }
+
     .call-name {
         font-size: 1.5em;
         margin: 10px 0 25px 70px;
@@ -195,5 +235,17 @@
 
     .call-info-link {
         font-size: 1em;
+    }
+
+    .admin-team-wrapper {
+        .call-name {
+            margin-bottom: 0;
+            margin-left: 0;
+        }
+
+        .user-name {
+            font-size: 1em;
+            margin: 0;
+        }
     }
 }
