--- a/front-end/site/scss/_avatar.scss
+++ b/front-end/site/scss/_avatar.scss
@@ -22,6 +22,15 @@
     font-size: 26px;
 }
 
+.admin-team-wrapper {
+    .user-avatar {
+        width: 70px;
+        height: 70px;
+        line-height: 70px;
+        font-size: 1.5em;
+    }
+}
+
 @media screen and (max-width: 1600px) {
     .call-avatar {
         position: absolute;
@@ -38,5 +47,14 @@
     .nav-user-avatar {
         width: $nav-height-1600;
         font-size: 1.3em;
+    }
+
+    .admin-team-wrapper {
+        .user-avatar {
+            width: 50px;
+            height: 50px;
+            line-height: 50px;
+            font-size: 1.3em;
+        }
     }
 }
