--- a/ITWORKS/styles.css
+++ b/ITWORKS/styles.css
@@ -69,7 +69,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #3fafd7;
+    background: #fff;
 }
 
 input, label {
@@ -80,11 +80,9 @@ input, label {
 }
 
 .wrapper {
-    width: 25%;
-    background: #fff;
+    width: 500px;
     padding: 50px 0 60px;
     border-radius: 5px;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
@@ -98,44 +96,49 @@ h1 {
     font-weight: 900;
     text-transform: uppercase;
     color: #3fafd7;
-    text-align: center;
-    font-size: 16pt;
+    font-size: 18pt;
     margin-top: 5px;
 }
 
 .input-label {
     display: block;
-    text-align: center;
-    color: #50575E;
-    font-size: 18pt;
+    color: #3fafd7;
+    font-size: 14pt;
     margin: 0 auto;
-    margin: 60px 0 0;
 }
 
 .form-input {
-    margin: 10px auto;
+    margin: 30px auto 5px;
     display: block;
-    padding: 10px;
-    width: 250px;
-    border-radius: 5px;
+    padding: 2px 0;
+    width: 500px;
     color: #3fafd7;
-    border: 2px solid #3fafd7;
-    text-align: center;
+    font-size: 60pt;
+    background: #fff;
+    border: 0;
+    border-bottom: 2px solid #3fafd7;
 }
 
 .btn {
     display: block;
-    margin: 50px auto 0;
-    background: #F9AA1E;
-    border: 0;
+    margin: 40px 0 0;
+    background: #3fafd7;
     color: #fff;
+    border: 0;
     padding: 14px;
-    width: 280px;
-    border-radius: 5px;
+    width: 500px;
     cursor: pointer;
-    transition: background 0.4s;
+    transition: background 0.3s;
 }
 
 .btn:hover {
-    background: #3fafd7;
+    background: #389bbe;
+}
+
+#output {
+    color: #666;
+}
+
+table {
+    display: none;
 }
